--- a/remark/mmenu/navigation-bar-admin.html
+++ b/remark/mmenu/navigation-bar-admin.html
@@ -3,11 +3,10 @@
     <ul class="site-menu">
       <li class="site-menu-item has-sub">
         <a href="javascript:void(0)">
-                  <i class="site-menu-icon wb-dashboard" aria-hidden="true"></i>
-                  <span class="site-menu-title">Dashboard</span>
-                          <span class="site-menu-arrow"></span>
+                  <i class="icon wb-video" aria-hidden="true"></i>
+                  <span style="position:absolute;margin-left:10%;" class="site-menu-title">Video</span>
               </a>
-        <ul class="site-menu-sub">
+       <!-- <ul class="site-menu-sub">
           <li class="site-menu-item active">
             <a href="index.html">
               <span class="site-menu-title">Dashboard v1</span>
@@ -33,15 +32,14 @@
               <span class="site-menu-title">Team</span>
             </a>
           </li>
-        </ul>
+        </ul>-->
       </li>
       <li class="site-menu-item has-sub">
         <a href="javascript:void(0)">
-                  <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
-                  <span class="site-menu-title">Layouts</span>
-                          <span class="site-menu-arrow"></span>
+                  <i class="icon wb-calendar" aria-hidden="true"></i>
+                  <span style="position:absolute;margin-left:10%;" class="site-menu-title">Events</span>
               </a>
-        <ul class="site-menu-sub">
+        <!--<ul class="site-menu-sub">
           <li class="site-menu-item">
             <a href="layouts/menu-collapsed.html">
               <span class="site-menu-title">Menu Collapsed</span>
@@ -118,15 +116,14 @@
               </li>
             </ul>
           </li>
-        </ul>
+        </ul>-->
       </li>
       <li class="site-menu-item has-sub">
         <a href="javascript:void(0)">
-                  <i class="site-menu-icon wb-file" aria-hidden="true"></i>
-                  <span class="site-menu-title">Pages</span>
-                          <span class="site-menu-arrow"></span>
+                  <i class="icon wb-gallery" aria-hidden="true"></i>
+                  <span style="position:absolute;margin-left:10%;" class="site-menu-title">Gallery</span>
               </a>
-        <ul class="site-menu-sub">
+        <!--<ul class="site-menu-sub">
           <li class="site-menu-item has-sub">
             <a href="javascript:void(0)">
               <span class="site-menu-title">Errors</span>
@@ -330,15 +327,14 @@
               </div>
             </a>
           </li>
-        </ul>
+        </ul>-->
       </li>
       <li class="site-menu-item has-sub">
         <a href="javascript:void(0)">
-                  <i class="site-menu-icon wb-bookmark" aria-hidden="true"></i>
-                  <span class="site-menu-title">Basic UI</span>
-                          <span class="site-menu-arrow"></span>
+                  <i class="icon wb-book" aria-hidden="true"></i>
+                  <span style="position:absolute;margin-left:10%;" class="site-menu-title">Blog</span>
               </a>
-        <ul class="site-menu-sub">
+        <!--<ul class="site-menu-sub">
           <li class="site-menu-item has-sub">
             <a href="javascript:void(0)">
               <span class="site-menu-title">Panel</span>
@@ -437,15 +433,14 @@
               <span class="site-menu-title">Utilties</span>
             </a>
           </li>
-        </ul>
+        </ul>-->
       </li>
       <li class="site-menu-item has-sub">
         <a href="javascript:void(0)">
-                  <i class="site-menu-icon wb-hammer" aria-hidden="true"></i>
-                  <span class="site-menu-title">Advanced UI</span>
-                          <span class="site-menu-arrow"></span>
+                  <i class="icon fa-newspaper-o" aria-hidden="true"></i>
+                  <span style="position:absolute;margin-left:10%;" class="site-menu-title">News</span>
               </a>
-        <ul class="site-menu-sub">
+        <!--<ul class="site-menu-sub">
           <li class="site-menu-item hidden-sm-down site-tour-trigger">
             <a href="javascript:void(0)">
               <span class="site-menu-title">Tour</span>
@@ -521,15 +516,14 @@
               <span class="site-menu-title">Bootbox &amp; Sweetalert</span>
             </a>
           </li>
-        </ul>
+        </ul>-->
       </li>
       <li class="site-menu-item has-sub">
         <a href="javascript:void(0)">
-                  <i class="site-menu-icon wb-plugin" aria-hidden="true"></i>
-                  <span class="site-menu-title">Structure</span>
-                          <span class="site-menu-arrow"></span>
+                  <i class="icon fa-sitemap" aria-hidden="true"></i>
+                  <span style="position:absolute;margin-left:10%;" class="site-menu-title">Sitemap</span>
               </a>
-        <ul class="site-menu-sub">
+  <!--<ul class="site-menu-sub">
           <li class="site-menu-item">
             <a href="structure/alerts.html">
               <span class="site-menu-title">Alerts</span>
@@ -950,7 +944,7 @@
               </div>
             </a>
           </li>
-        </ul>
+        </ul>-->
       </li>
     </ul>
   </div>
