--- a/remark/mmenu/forms/file-uploads.html
+++ b/remark/mmenu/forms/file-uploads.html
@@ -1784,7 +1784,7 @@
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '../../../../www.google-analytics.com/analytics.js',
+    })(window, document, 'script', '../www.google-analytics.com/analytics.js',
       'ga');
 
     ga('create', 'UA-65522665-1', 'auto');
