--- a/remark/mmenu/navigation-bar-admin.html
+++ b/remark/mmenu/navigation-bar-admin.html
@@ -5,19 +5,20 @@
         <a href="javascript:void(0)">
                   <i class="icon wb-video" aria-hidden="true"></i>
                   <span style="position:absolute;margin-left:10%;" class="site-menu-title">Video</span>
+                  <span class="site-menu-arrow"></span>
               </a>
-       <!-- <ul class="site-menu-sub">
+        <ul class="site-menu-sub">
           <li class="site-menu-item active">
-            <a href="index.html">
-              <span class="site-menu-title">Dashboard v1</span>
+            <a href="addVideoForm.php">
+              <span class="site-menu-title">Add Video</span>
             </a>
           </li>
           <li class="site-menu-item">
             <a href="dashboard/v2.html">
-              <span class="site-menu-title">Dashboard v2</span>
+              <span class="site-menu-title">View Videos</span>
             </a>
           </li>
-          <li class="site-menu-item">
+          <!--<li class="site-menu-item">
             <a href="dashboard/ecommerce.html">
               <span class="site-menu-title">Ecommerce</span>
             </a>
@@ -31,8 +32,8 @@
             <a href="dashboard/team.html">
               <span class="site-menu-title">Team</span>
             </a>
-          </li>
-        </ul>-->
+          </li>-->
+        </ul>
       </li>
       <li class="site-menu-item has-sub">
         <a href="javascript:void(0)">
@@ -364,7 +365,7 @@
                     </ul>
                   </li>-->
                   <li class="site-menu-item">
-                    <a href="blog_addblog.php">
+                    <a href="blog_add-blog-form.php">
 
                       <span class="site-menu-title">Add Blog</span>
                     </a>
