--- a/remark/mmenu/apps/calendar/calendar.html
+++ b/remark/mmenu/apps/calendar/calendar.html
@@ -1541,8 +1541,9 @@
 
   <!-- Page -->
   <div class="page">
-    <div class="page-aside">
-      <div class="page-aside-switch">
+    <div class="page-horizontal-line">
+     <!--<div class="page-aside">
+     <div class="page-aside-switch">
         <i class="icon wb-chevron-left" aria-hidden="true"></i>
         <i class="icon wb-chevron-right" aria-hidden="true"></i>
       </div>
@@ -1647,102 +1648,102 @@
           </div>
         </div>
       </div>
+    </div> -->
     </div>
-
     <div class="page-main">
       <div class="calendar-container">
         <div id="calendar"></div>
 
         <!--AddEvent Dialog -->
-        <div class="modal fade" id="addNewEvent" aria-hidden="true" aria-labelledby="addNewEvent"
-          role="dialog" tabindex="-1">
-          <div class="modal-dialog modal-simple">
-            <form class="modal-content form-horizontal" action="#" method="post" role="form">
-              <div class="modal-header">
-                <button type="button" class="close" aria-hidden="true" data-dismiss="modal">×</button>
-                <h4 class="modal-title">New Event</h4>
-              </div>
-              <div class="modal-body">
-                <div class="form-group row">
-                  <label class="col-md-2 form-control-label" for="ename">Name:</label>
-                  <div class="col-md-10">
-                    <input type="text" class="form-control" id="ename" name="ename">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-md-2 form-control-label" for="starts">Starts:</label>
-                  <div class="col-md-10">
-                    <div class="input-group">
-                      <input type="text" class="form-control" id="starts" data-container="#addNewEvent"
-                        data-plugin="datepicker">
-                      <span class="input-group-addon">
-                        <i class="icon wb-calendar" aria-hidden="true"></i>
-                      </span>
-                    </div>
-                  </div>
-                </div>
+                <div class="modal fade" id="addNewEvent" aria-hidden="true" aria-labelledby="addNewEvent"
+                  role="dialog" tabindex="-1">
+                  <div class="modal-dialog modal-simple">
+                    <form class="modal-content form-horizontal" action="#" method="post" role="form">
+                      <div class="modal-header">
+                        <button type="button" class="close" aria-hidden="true" data-dismiss="modal">×</button>
+                        <h4 class="modal-title">New Event</h4>
+                      </div>                                                            
+                      <div class="modal-body">
+                        <div class="form-group row">
+                          <label class="col-md-2 form-control-label" for="ename">Name:</label>
+                          <div class="col-md-10">
+                            <input type="text" class="form-control" id="ename" name="ename">
+                          </div>
+                        </div>
+                        <div class="form-group row">
+                          <label class="col-md-2 form-control-label" for="starts">Starts:</label>
+                          <div class="col-md-10">
+                            <div class="input-group">
+                              <input type="text" class="form-control" id="starts" data-container="#addNewEvent"
+                                data-plugin="datepicker">
+                              <span class="input-group-addon">
+                                <i class="icon wb-calendar" aria-hidden="true"></i>
+                              </span>
+                            </div>
+                          </div>
+                        </div>
 
-                <div class="form-group row">
-                  <label class="col-md-2 form-control-label" for="ends">Ends:</label>
-                  <div class="col-md-10">
-                    <div class="input-group">
-                      <input type="text" class="form-control" id="ends" data-container="#addNewEvent"
-                        data-plugin="datepicker">
-                      <span class="input-group-addon">
-                        <i class="icon wb-calendar" aria-hidden="true"></i>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-md-2 form-control-label" for="repeats">Repeats:</label>
-                  <div class="col-md-10">
-                    <input type="text" class="form-control" id="repeats" name="repeats" data-plugin="TouchSpin"
-                      data-min="0" data-max="10" value="0" />
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="form-control-label col-md-2">Color:</label>
-                  <div class="col-md-10">
-                    <ul class="color-selector">
-                      <li class="bg-blue-600">
-                        <input type="radio" checked name="eventColorChosen" id="eventColorChosen2">
-                        <label for="eventColorChosen2"></label>
-                      </li>
-                      <li class="bg-green-600">
-                        <input type="radio" name="eventColorChosen" id="eventColorChosen3">
-                        <label for="eventColorChosen3"></label>
-                      </li>
-                      <li class="bg-cyan-600">
-                        <input type="radio" name="eventColorChosen" id="eventColorChosen4">
-                        <label for="eventColorChosen4"></label>
-                      </li>
-                      <li class="bg-orange-600">
-                        <input type="radio" name="eventColorChosen" id="eventColorChosen5">
-                        <label for="eventColorChosen5"></label>
-                      </li>
-                      <li class="bg-red-600">
-                        <input type="radio" name="eventColorChosen" id="eventColorChosen6">
-                        <label for="eventColorChosen6"></label>
-                      </li>
-                      <li class="bg-blue-grey-600">
-                        <input type="radio" name="eventColorChosen" id="eventColorChosen7">
-                        <label for="eventColorChosen7"></label>
-                      </li>
-                      <li class="bg-purple-600">
-                        <input type="radio" name="eventColorChosen" id="eventColorChosen8">
-                        <label for="eventColorChosen8"></label>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-md-2 form-control-label" for="people">People:</label>
-                  <div class="col-md-10">
-                    <select id="eventPeople" multiple="multiple" class="plugin-selective"></select>
-                  </div>
-                </div>
-              </div>
+                        <div class="form-group row">
+                          <label class="col-md-2 form-control-label" for="ends">Ends:</label>
+                          <div class="col-md-10">
+                            <div class="input-group">
+                              <input type="text" class="form-control" id="ends" data-container="#addNewEvent"
+                                data-plugin="datepicker">
+                              <span class="input-group-addon">
+                                <i class="icon wb-calendar" aria-hidden="true"></i>
+                              </span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group row">
+                          <label class="col-md-2 form-control-label" for="repeats">Repeats:</label>
+                          <div class="col-md-10">
+                            <input type="text" class="form-control" id="repeats" name="repeats" data-plugin="TouchSpin"
+                              data-min="0" data-max="10" value="0" />
+                          </div>
+                        </div>
+                        <div class="form-group row">
+                          <label class="form-control-label col-md-2">Color:</label>
+                          <div class="col-md-10">
+                            <ul class="color-selector">
+                              <li class="bg-blue-600">
+                                <input type="radio" checked name="eventColorChosen" id="eventColorChosen2">
+                                <label for="eventColorChosen2"></label>
+                              </li>
+                              <li class="bg-green-600">
+                                <input type="radio" name="eventColorChosen" id="eventColorChosen3">
+                                <label for="eventColorChosen3"></label>
+                              </li>
+                              <li class="bg-cyan-600">
+                                <input type="radio" name="eventColorChosen" id="eventColorChosen4">
+                                <label for="eventColorChosen4"></label>
+                              </li>
+                              <li class="bg-orange-600">
+                                <input type="radio" name="eventColorChosen" id="eventColorChosen5">
+                                <label for="eventColorChosen5"></label>
+                              </li>
+                              <li class="bg-red-600">
+                                <input type="radio" name="eventColorChosen" id="eventColorChosen6">
+                                <label for="eventColorChosen6"></label>
+                              </li>
+                              <li class="bg-blue-grey-600">
+                                <input type="radio" name="eventColorChosen" id="eventColorChosen7">
+                                <label for="eventColorChosen7"></label>
+                              </li>
+                              <li class="bg-purple-600">
+                                <input type="radio" name="eventColorChosen" id="eventColorChosen8">
+                                <label for="eventColorChosen8"></label>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="form-group row">
+                          <label class="col-md-2 form-control-label" for="people">People:</label>
+                          <div class="col-md-10">
+                            <select id="eventPeople" multiple="multiple" class="plugin-selective"></select>
+                          </div>
+                        </div>
+                      </div>
               <div class="modal-footer">
                 <div class="form-actions">
                   <button class="btn btn-primary" data-dismiss="modal" type="button">Add this event</button>
@@ -2052,7 +2053,7 @@
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '../../../../../www.google-analytics.com/analytics.js',
+    })(window, document, 'script', '../../www.google-analytics.com/analytics.js',
       'ga');
 
     ga('create', 'UA-65522665-1', 'auto');
