--- a/remark/mmenu/header2.html
+++ b/remark/mmenu/header2.html
@@ -1,3 +1,17 @@
+  <!--[if lt IE 9]>
+    <script src="../global/vendor/html5shiv/html5shiv.min.js?v4.0.2"></script>
+    <![endif]-->
+
+  <!--[if lt IE 10]>
+    <script src="../global/vendor/media-match/media.match.min.js?v4.0.2"></script>
+    <script src="../global/vendor/respond/respond.min.js?v4.0.2"></script>
+    <![endif]-->
+
+  <!-- Scripts -->
+  <script src="../global/vendor/breakpoints/breakpoints.min599c.js?v4.0.2"></script>
+  <script>
+    Breakpoints();
+  </script>
 </head>
 <body class="animsition site-navbar-small dashboard">
   <!--[if lt IE 8]>
