--- a/remark/mmenu/footer-calendar.html
+++ b/remark/mmenu/footer-calendar.html
@@ -14,7 +14,7 @@
   <script src="../global/vendor/animsition/animsition.min599c.js?v4.0.2"></script>
   <script src="../global/vendor/mousewheel/jquery.mousewheel599c.js?v4.0.2"></script>
   <script src="../global/vendor/asscrollbar/jquery-asScrollbar.min599c.js?v4.0.2"></script>
-  <!--<script src="../global/vendor/asscrollable/jquery-asScrollable.min599c.js?v4.0.2"></script>-->
+  <script src="../global/vendor/asscrollable/jquery-asScrollable.min599c.js?v4.0.2"></script>
 
   <!-- Plugins -->
   <script src="../global/vendor/jquery-mmenu/jquery.mmenu.min.all599c.js?v4.0.2"></script>
