--- a/remark/mmenu/navigation-bar-admin.html
+++ b/remark/mmenu/navigation-bar-admin.html
@@ -96,12 +96,12 @@
         <ul class="site-menu-sub">
       
           <li class="site-menu-item">
-            <a href="news_addnews.php">
+            <a href="news-add.php">
               <span class="site-menu-title">Add News</span>
             </a>
           </li>
           <li class="site-menu-item">
-            <a href="news_view-news.php">
+            <a href="news-view.php">
               <span class="site-menu-title">View News</span>
             </a>
           </li>
