--- a/remark/mmenu/widgets/blog.html
+++ b/remark/mmenu/widgets/blog.html
@@ -1788,7 +1788,7 @@
           </div>
           <!-- End Widget With Video -->
         </div>
-
+  <br>
         <div class="col-lg-6 col-sm-12 masonry-item">
           <!-- Widget with Overlay-shade -->
           <div class="card card-shadow">
@@ -1830,7 +1830,7 @@
 
         <div class="col-lg-6 col-sm-12 masonry-item">
           <!-- Widget with Horizontal posts -->
-          <div class="card card-shadow">
+          <!--<div class="card card-shadow">
             <div class="card-header cover overlay-hover overlay">
               <img class="cover-image overlay-figure overlay-spin" src="../../global/photos/view-6-960x640.jpg"
                 alt="...">
@@ -1863,9 +1863,9 @@
                 <a class="btn btn-default btn-outline card-link" href="javascript:void(0)">READ MORE</a>
               </div>
             </div>
-          </div>
+          </div>-->
           <!-- End Widget with Horizontal posts -->
-        </div>
+        </div> 
 
         <div class="col-lg-6 col-sm-12 masonry-item">
           <!-- Widget -->
